# K8s-operator

./: Cargo.toml  report1.md  reports.md
manifests/: crd.yaml
src/: crd.rs  error.rs  main.rs  operator.rs
