[package]
name = "my-k8s-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
kube = { version = "0.85.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.19.0", features = ["v1_26"] }
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
thiserror = "1.0.40"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
anyhow = "1.0.71"
schemars = "0.8"  # Add this line for JsonSchema support
